...
        return container
    }()

    private enum Constants {
        static let profileViewTitle = "Profile"
        static let recipesViewTitle = "Recipes"
        static let favoritesViewTitle = "Favorites"
    }

    // MARK: - Public Methods

    func makeAuthModule(coordinator: BaseModuleCoordinator) -> AuthView {
        let authService = AuthService()
...
