...

    func updateState(_ state: CategoryState) {
        switch state {
        case .noData:
            refreshButton.isHidden = true
            iconImageView.image = .search
            nothingLabel.text = "Start typing text"
        default:
            refreshButton.isHidden = false
            refreshButton.isUserInteractionEnabled = true
            iconImageView.image = .lightning
            nothingLabel.text = "Failed to load data"
        }
...
